# yolo-earth-segmentation

./: Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: build.yaml
